--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 @import "tailwindcss/preflight";
 @import "tailwindcss/theme";
 @import "tailwindcss/utilities";
@@ -82,11 +81,18 @@ body {
 }
 
 .input::placeholder {
-  color: var(--color-gray-400);
+  color: var(--color-gray-200);
 }
 
 .input:focus {
   border-color: var(--color-brand-500);
   box-shadow: 0 0 0 2px
     color-mix(in srgb, var(--color-brand-500) 40%, transparent);
+}
+
+@layer components {
+  .box {
+    @apply flex flex-col gap-5 sm:gap-4 w-full sm:w-md 
+    bg-gray-0 rounded-lg sm:shadow-lg;
+  }
 }
